Fix CI issues (#24)
