# api/controller/api_types.go
@@ -4,6 +4,4 @@ type APIError struct {
 	ErrorCode    int
 	ErrorMessage string
 }
-type fileBytes []byte
-
-type bloburl []byte
+type Bytes []byte
